--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.12.10",
+    "axios": "^1.8.4",
+    "cloudinary": "^2.6.0",
+    "critters": "^0.0.23",
     "inngest": "^3.34.0",
     "mongoose": "^8.13.0",
     "next": "^15.2.4",
